--- a/Website.html
+++ b/Website.html
@@ -31,6 +31,12 @@
        apps or video games.
     </p>
     <br>
+      <p>So far you have rolled:</p>
+    <ul id="list"></ul>
+    <button id="button_roll">Roll the dice</button>
+    <p>Total: <span id="total">0</span>. <span id="info">Keep playing!</span></p>
+    <button id="button_remove">Remove the last roll</button>
+    <button id="button_restart">Start again</button>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/mmnwkv15BSY" title="YouTube video player" allow="accelerometer; autoplay;
      clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
